src/test/ui/type-alias-impl-trait/generic_duplicate_param_use9.stderr
error[E0277]: the trait bound `A: Foo` is not satisfied
  --> $DIR/generic_duplicate_param_use9.rs:15:5
   |
LL |     (t, u, T::BAR)
   |     ^^^^^^^^^^^^^^ the trait `Foo` is not implemented for `A`
   |
help: consider restricting type parameter `A`
   |
LL | type Two<A: Foo, B> = impl Debug;
   |           +++++

error[E0277]: `A` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use9.rs:15:5
   |
LL |     (t, u, T::BAR)
   |     ^^^^^^^^^^^^^^ `A` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = note: required for `(A, B, _)` to implement `Debug`
help: consider restricting type parameter `A`
   |
LL | type Two<A: std::fmt::Debug, B> = impl Debug;
   |           +++++++++++++++++

error[E0277]: `B` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use9.rs:15:5
   |
LL |     (t, u, T::BAR)
   |     ^^^^^^^^^^^^^^ `B` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = note: required for `(A, B, _)` to implement `Debug`
help: consider restricting type parameter `B`
   |
LL | type Two<A, B: std::fmt::Debug> = impl Debug;
   |              +++++++++++++++++

error[E0277]: `A` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use9.rs:22:5
   |
LL |     (t, u, 42)
   |     ^^^^^^^^^^ `A` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = note: required for `(A, B, i32)` to implement `Debug`
help: consider restricting type parameter `A`
   |
LL | type Two<A: std::fmt::Debug, B> = impl Debug;
   |           +++++++++++++++++

error[E0277]: `B` doesn't implement `Debug`
  --> $DIR/generic_duplicate_param_use9.rs:22:5
   |
LL |     (t, u, 42)
   |     ^^^^^^^^^^ `B` cannot be formatted using `{:?}` because it doesn't implement `Debug`
   |
   = note: required for `(A, B, i32)` to implement `Debug`
help: consider restricting type parameter `B`
   |
LL | type Two<A, B: std::fmt::Debug> = impl Debug;
   |              +++++++++++++++++

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0277`.
